# linux-workstation-playbook

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  Vagrantfile  ansible.cfg  configuration.nix  default.config.yml  flake.nix  main.yml  pyproject.toml  requirements.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  constraints.txt  labeler.yml  precommit-update.yml  release-drafter.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
eg/: flake.nix  local.nix
files/workspace/: .gitconfig_user
modules/: default.nix  sysconf.nix  tmux.nix
modules/gui/: default.nix  gnome.nix  xdg.nix
modules/nfs/: default.nix
modules/services/: default.nix
modules/services/deluge/: default.nix
modules/services/jellyfin/: default.nix
molecule/default/: INSTALL.md  INSTALL.rst  converge.yml  molecule.yml
pkgs/: overlays.nix
src/: base.nix  dconf.nix  default.nix  home.nix  terminal.nix  users.nix
tasks/: cryptomator.yml  extra-packages.yml  git-setup.yml  gnome-setup.yml  home-manager.yml  international-keyboard.yml  keyboard.yml  keypass-xc.yml  office.yml  openrgb.yml  packages.yml  pycharm.yml  site.yml  ssh.yml  sudoers.yml  terminal.yml  validate-config.yml  vscode.yml  workspace.yml  zsh.yml
templates/gitconfig/: .gitconfig_user.t2  .gitconfig_workspace.t2
templates/keyboard/: config.t2
templates/workspace/: .gitconfig.t2
templates/zsh/: .zshrc.t2
