[tool.poetry]
name = "linux-workstation-playbook"
version = "0.8.0"
description = "Linux workstation machine setup and configuration via Ansible."
authors = ["staticdev <staticdev-support@protonmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
