[tool.poetry]
name = "linux-workstation-playbook"
version = "1.0.2"
description = "Linux workstation machine setup and configuration via Ansible."
authors = ["staticdev <staticdev-support@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
